# readability-scores

./: pyproject.toml
readability_scores/: component.py  constants.py
tests/: test_books.py  test_readability_scores.py
tests/samples/: peter_rabbit.json  tale_of_two_cities.json
